test/integration/good/tuples/tuple-params.stan
parameters {
  (real, real<lower=0>) ps;
}
