test/integration/bad/functions-bad28.stan
parameters {
  real y;
}
generated quantities {
  extern(y);
}
